objects/Contract__c.object
<CustomObject>
    <fields>
        <fullName>Academies_Contract_Value_2__c</fullName>
        <formula>Academies_Contract_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TD Contract Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Academies_Contract_Value__c</fullName>
        <formula>If(ISPICKVAL( Program__r.Business_line__c  , &quot;TD&quot; ),  Annual_Contract_Value__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TD Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accounting_Contract_Value__c</fullName>
        <label>Accounting Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_2__c</fullName>
        <formula>if((ispickval( Status__c , &quot;ATL&quot;)  || ispickval( Status__c , &quot;Dropped&quot;)|| ispickval( Status__c , &quot;Honorary&quot;))  &amp;&amp;   ( Start__c  &lt;= Today())  &amp;&amp;  (End__c &gt;= Today()) , &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <label>Active Date Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adj_At_Risk_Accounting_Contract_Value__c</fullName>
        <description>Created for CR-20140918-7404. Formula: if([At Risk Accounting Contract Value] is null, [Risk Negotiated Amount], [At Risk Accounting Contract Value])</description>
        <formula>IF(
AND(
NOT(ISBLANK(At_Risk_Accounting_Contract_Value__c)),
NOT(ISNULL(At_Risk_Accounting_Contract_Value__c))
),
At_Risk_Accounting_Contract_Value__c,
Risk_Negotiated_Amount__c
)</formula>
        <label>Adj. At Risk Accounting Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Accounting_Contract_Value__c</fullName>
        <formula>IF(
   AND(
       NOT(ISBLANK(Accounting_Contract_Value__c)),
       NOT(ISNULL(Accounting_Contract_Value__c))
   ),
   Accounting_Contract_Value__c,
   Negotiated_Amount__c  
)</formula>
        <label>Adjusted Accounting Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_At_Risk_Internal_ABC_Allocation__c</fullName>
        <description>Created for CR-20140918-7404. Formula:  if([At Risk Internal ABC Allocation] is null, [Risk Negotiated Amount], [At Risk Internal ABC Allocation])</description>
        <formula>IF(
AND(
NOT(ISBLANK(At_Risk_Internal_ABC_Allocation__c)),
NOT(ISNULL(At_Risk_Internal_ABC_Allocation__c))
),
At_Risk_Internal_ABC_Allocation__c,
Risk_Negotiated_Amount__c
)</formula>
        <label>Adjusted At Risk Internal ABC Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Internal_ABC_Allocation__c</fullName>
        <formula>IF( 
   AND(
       NOT(ISBLANK(Internal_ABC_Allocation__c)),
       NOT(ISNULL(Internal_ABC_Allocation__c))
   ), 
   Internal_ABC_Allocation__c, 
   Negotiated_Amount__c 
)</formula>
        <label>Adjusted Internal ABC Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Credited_Total__c</fullName>
        <label>Amount Credited Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value__c</fullName>
        <formula>Negotiated_Amount__c /(( End__c  -  Start__c +1)/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>Created for CR-20141218-8372.</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>CR-20141218-8372</description>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-20141218-8372</description>
        <label>Approved By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts ABC (Approved By)</relationshipLabel>
        <relationshipName>Contracts_ABC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>At_Risk_Accounting_Contract_Value__c</fullName>
        <label>At Risk Accounting Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>At_Risk_Internal_ABC_Allocation__c</fullName>
        <label>At Risk Internal ABC Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>At_Risk_Type__c</fullName>
        <description>Created for CR-20141218-8372.</description>
        <label>At Risk Type</label>
        <picklist>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance-Based Risk (end-of-contract)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Throughout Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reallocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rewards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Average_Credited_PI__c</fullName>
        <label>Average Credited PI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_PI__c</fullName>
        <formula>(Y2_PI__c + Y3_PI__c + Y4_PI__c + Y5_PI__c) / if((Y2_Annual_Fee__c + Y3_Annual_Fee__c+ Y4_Annual_Fee__c + Y5_Annual_Fee__c) &gt; 0, Total_Counter__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average PI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BI_Contract_Value__c</fullName>
        <formula>If(ISPICKVAL( Program__r.Business_line__c  , &quot;PT&quot; ),  0 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_with_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Bill with ID</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Contracts ABC (Bill with ID)</relationshipLabel>
        <relationshipName>Contracts_ABC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Line_From_Trigger__c</fullName>
        <label>Business Line (From Trigger)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <formula>Text(Program__r.Business_line__c)</formula>
        <label>Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPI_Escalation_Cap__c</fullName>
        <label>CPI Escalation Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPI_Escalation_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPI Escalation Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculator_Annual__c</fullName>
        <label>Calculator Annual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculator_Set_Up__c</fullName>
        <label>Calculator Set-Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculator_Total__c</fullName>
        <label>Calculator Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_for_Approval_Offer__c</fullName>
        <description>CR-20141218-8372</description>
        <label>Comments for Approval Offer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_for_Revenue_at_Risk__c</fullName>
        <description>CR-20141218-8372</description>
        <label>Comments for Revenue at Risk</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Committed_Contract_Length__c</fullName>
        <label>Committed Contract Length</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Concessions_Comments__c</fullName>
        <label>Concessions Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Concessions__c</fullName>
        <label>Concessions</label>
        <picklist>
            <picklistValues>
                <fullName>Sample 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contract_1_Yr_Term__c</fullName>
        <formula>IF(Years_in_Term__c = 1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract 1 Yr Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_2_Yr_Term__c</fullName>
        <formula>IF(Years_in_Term__c = 2, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract 2 Yr Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_3_Yr_Term__c</fullName>
        <formula>IF(Years_in_Term__c = 3, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract 3 Yr Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Active__c</fullName>
        <formula>IF(!ISBLANK(Start__c) &amp;&amp; !ISBLANK(End__c),
IF(Start__c &lt;= TODAY() &amp;&amp; End__c  &gt;= TODAY(), 1, 0),
0)</formula>
        <label>Contract Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Count__c</fullName>
        <label>Contract Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Currency__c</fullName>
        <label>Contract Currency</label>
        <picklist>
            <picklistValues>
                <fullName>ARS - Argentine Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD - Australian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL - Brazilian Real</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD - Canadian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF - Swiss Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP - Chilean Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP - Colombian Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK - Danish krone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR - Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP - British Pound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXN - Mexican Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR - Malaysian Ringgit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK - Norwegian Krone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD - New Zealand Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP - Philippine Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QAR - Qatar Rial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK - Swedish Krona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD - Singapore Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB - Thai Baht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWD - New Taiwan Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD - US Dollar</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Opt_Out__c</fullName>
        <formula>IF(ISPICKVAL(Term_Type__c, &quot;Opt Out&quot;), 1, 0)</formula>
        <label>Contract Opt Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contract Renewal Opportunity</relationshipLabel>
        <relationshipName>Contracts_ABC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Category__c</fullName>
        <formula>TEXT(Years_in_Term__c) + &quot; Year &quot; + TEXT(Term_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Term Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Contract_Value__c</fullName>
        <formula>If(ISPICKVAL( Program__r.Business_line__c  , &quot;RI&quot; ), Annual_Contract_Value__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RI Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>T{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Total__c</fullName>
        <label>Credit Note Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credited_Contract_Length__c</fullName>
        <label>Credited Contract Length</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAS_Fees__c</fullName>
        <description>Created for CR-20160106-9495.</description>
        <label>DAS Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Added_to_Rev_Rec__c</fullName>
        <description>Created for CR-20141218-8372.</description>
        <label>Date Added to Rev Rec</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Manager__c</fullName>
        <description>Displaying the value of the &quot;Credit Manager&quot; field on the related Payer Institution.</description>
        <formula>Hyperlink(Payer_Account__r.c2g__CODACreditManager__c, Payer_Account__r.c2g__CODACreditManager__r.FirstName + &quot; &quot; + Payer_Account__r.c2g__CODACreditManager__r.LastName)</formula>
        <label>Finance Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Invoice_Created__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>First Invoice Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecasted_in_Rev_Rec__c</fullName>
        <description>CR-20141218-8372</description>
        <label>Forecasted in Rev Rec</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasting_End_Date_Change__c</fullName>
        <description>CR-20141218-8372</description>
        <label>Forecasting End Date Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecasting_Expected_Closure_Date__c</fullName>
        <description>CR-20141218-8372</description>
        <label>Forecasting Expected Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecasting_Potential_Revenue_Change_Num__c</fullName>
        <description>CR-20141218-8372</description>
        <label>Forecasting Potential Revenue Change Num</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasting_Revenue_at_Risk_Type__c</fullName>
        <description>CR-20141218-8372</description>
        <label>Forecasting Revenue at Risk Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <formula>&quot;A0010000-0000-0000-0000-0000&quot; &amp; RIGHT(Counter_ID__c,8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWorks_Contract_Value__c</fullName>
        <formula>If(ISPICKVAL( Program__r.Business_line__c  , &quot;CM&quot; ),  Annual_Contract_Value__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Historical_Linker__c</fullName>
        <label>Historical Linker</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Invoice_Date__c</fullName>
        <label>Initial Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_ABC_Allocation__c</fullName>
        <label>Internal ABC Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Billing_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Billing Schedule</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select Billing Schedules associated with the Payer Account on this Contract.</errorMessage>
            <filterItems>
                <field>$Source.Payer_Account__c</field>
                <operation>equals</operation>
                <valueField>Invoice_Billing_Schedule__c.Institution__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Invoice_Billing_Schedule__c</referenceTo>
        <relationshipLabel>Contracts ABC</relationshipLabel>
        <relationshipName>Contracts_ABC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Total__c</fullName>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoicing_Arrangement__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Invoicing Arrangement</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed Year 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Metric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoicing_Instructions__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Invoicing Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Join_Date__c</fullName>
        <description>If this is the first contract, then the date is set manually.  Otherwise it is the Previous Contract&apos;s join Date</description>
        <label>Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Likely_to_Close_in_Quarter__c</fullName>
        <description>CR-20141218-8372</description>
        <label>% Likely to Close in Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likely_to_Close_in_Year__c</fullName>
        <description>CR-20141218-8372</description>
        <label>% Likely to Close in Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Item_Schedule_Total__c</fullName>
        <description>Total of all line items associated with this contract</description>
        <label>Line Item Schedule Total</label>
        <summarizedField>Line_Item_Schedule__c.Amount__c</summarizedField>
        <summaryForeignKey>Line_Item_Schedule__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maint_End__c</fullName>
        <label>Maint. End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maint_Month__c</fullName>
        <label>Maint. Month</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maint_Negotiated__c</fullName>
        <label>Maint. Negotiated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maint_Prev_Negotiated__c</fullName>
        <label>Maint. Prev Negotiated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maint_Start__c</fullName>
        <label>Maint. Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maint_Year__c</fullName>
        <label>Maint. Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negotiated_Amount__c</fullName>
        <label>Negotiated Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Negotiated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Negotiated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Invoiced__c</fullName>
        <description>Created for CR-20141218-8372.</description>
        <formula>Invoice_Total__c  -  Credit_Note_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business_Business__c</fullName>
        <formula>TEXT(Program__r.New_Business_Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Vertical__c</fullName>
        <formula>TEXT(Program__r.New_Business_Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>Text(Source_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Date__c</fullName>
        <label>Opt Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Type__c</fullName>
        <label>Opt Out Type</label>
        <picklist>
            <controllingField>Term_Type__c</controllingField>
            <picklistValues>
                <fullName>Service Quality Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Point In Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolling 30 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolling 60 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolling 90 + Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payer_Account__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Payer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts ABC</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Period_End_Date_1__c</fullName>
        <description>Created for CR-20160106-9495.</description>
        <label>Period End Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_End_Date_2__c</fullName>
        <description>Created for CR-20160106-9495.</description>
        <label>Period End Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_End_Date_3__c</fullName>
        <description>Created for CR-20160106-9495.</description>
        <label>Period End Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Fees_1__c</fullName>
        <description>Created for CR-20160106-9495.</description>
        <label>Period Fees 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_Fees_2__c</fullName>
        <description>Created for CR-20160106-9495.</description>
        <label>Period Fees 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_Fees_3__c</fullName>
        <description>Created for CR-20160106-9495.</description>
        <label>Period Fees 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date_1__c</fullName>
        <description>Created for CR-20160106-9495.</description>
        <label>Period Start Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date_2__c</fullName>
        <description>Created for CR-20160106-9495.</description>
        <label>Period Start Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date_3__c</fullName>
        <description>Created for CR-20160106-9495.</description>
        <label>Period Start Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Contracts ABC (Previous Contract)</relationshipLabel>
        <relationshipName>Contracts_ABC3</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>